--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Napoleon_68636
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68636-h/images/cover.jpg
 creator:
   author:
     agent_name: Faure, Élie
     gutenberg_agent_id: '54877'
     url: http://www.gutenberg.org/2009/agents/54877
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68636#Napoleon
 gutenberg_issued: '2022-07-29'
 identifiers:
   gutenberg: '68636'
